java-kanban Спринт 5, исправления замечаний