@@ -3,29 +3,28 @@ package ru.yandex.managers;
 import ru.yandex.entities.Task;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
     private List<Task> browsingHistory;
 
-    InMemoryHistoryManager() {
-        browsingHistory = new ArrayList<>();
+    public InMemoryHistoryManager() {
+        browsingHistory = new LinkedList<>();
     }
 
     @Override
     public void add(Task task) {
-        if (browsingHistory.size() < 10) {
-            browsingHistory.add(task);
-        } else {
-            browsingHistory.remove(0);
-            browsingHistory.add(task);
+        if (browsingHistory.size() >= 10) {
+            browsingHistory.removeFirst();
         }
+        browsingHistory.addLast(task);
     }
 
     @Override
     public List<Task> getHistory() {
-        return browsingHistory;
+        return new ArrayList<>(browsingHistory);
     }
 
 }
